--- a/examples/shopify/tokens/index.scss
+++ b/examples/shopify/tokens/index.scss
@@ -1,4 +1,3 @@
-// Shopify Polaris
 // This file was auto-generated from tokens.json.
 // DO NOT EDIT!
 
@@ -8,175 +7,175 @@ $__token-values: (
   "color.black": (
     default: (#000000),
   ),
-  "color.blue_lighter": (
+  "color.blueLighter": (
     default: (#ebf5fa),
   ),
-  "color.blue_light": (
+  "color.blueLight": (
     default: (#b4e1fa),
   ),
   "color.blue": (
     default: (#006fbb),
   ),
-  "color.blue_dark": (
+  "color.blueDark": (
     default: (#084e8a),
   ),
-  "color.blue_darker": (
+  "color.blueDarker": (
     default: (#001429),
   ),
-  "color.blue_text": (
+  "color.blueText": (
     default: (#3e4e57),
   ),
-  "color.green_lighter": (
+  "color.greenLighter": (
     default: (#e3f1df),
   ),
-  "color.green_light": (
+  "color.greenLight": (
     default: (#bbe5b3),
   ),
   "color.green": (
     default: (#50b83c),
   ),
-  "color.green_dark": (
+  "color.greenDark": (
     default: (#108043),
   ),
-  "color.green_darker": (
+  "color.greenDarker": (
     default: (#173630),
   ),
-  "color.green_text": (
+  "color.greenText": (
     default: (#414f3e),
   ),
-  "color.indigo_lighter": (
+  "color.indigoLighter": (
     default: (#f4f5fa),
   ),
-  "color.indigo_light": (
+  "color.indigoLight": (
     default: (#b3bcf5),
   ),
   "color.indigo": (
     default: (#5c6ac4),
   ),
-  "color.indigo_dark": (
+  "color.indigoDark": (
     default: (#202e78),
   ),
-  "color.indigo_darker": (
+  "color.indigoDarker": (
     default: (#000639),
   ),
-  "color.indigo_text": (
+  "color.indigoText": (
     default: (#3e4155),
   ),
-  "color.ink_lightest": (
+  "color.inkLightest": (
     default: (#919eab),
   ),
-  "color.ink_lighter": (
+  "color.inkLighter": (
     default: (#637381),
   ),
-  "color.ink_light": (
+  "color.inkLight": (
     default: (#454f5b),
   ),
   "color.ink": (
     default: (#212b36),
   ),
-  "color.orange_lighter": (
+  "color.orangeLighter": (
     default: (#fcebdb),
   ),
-  "color.orange_light": (
+  "color.orangeLight": (
     default: (#ffc58b),
   ),
   "color.orange": (
     default: (#f49342),
   ),
-  "color.orange_dark": (
+  "color.orangeDark": (
     default: (#c05717),
   ),
-  "color.orange_darker": (
+  "color.orangeDarker": (
     default: (#4a1504),
   ),
-  "color.orange_text": (
+  "color.orangeText": (
     default: (#594430),
   ),
-  "color.purple_lighter": (
+  "color.purpleLighter": (
     default: (#f6f0fd),
   ),
-  "color.purple_light": (
+  "color.purpleLight": (
     default: (#e3d0ff),
   ),
   "color.purple": (
     default: (#9c6ade),
   ),
-  "color.purple_dark": (
+  "color.purpleDark": (
     default: (#50248f),
   ),
-  "color.purple_darker": (
+  "color.purpleDarker": (
     default: (#230051),
   ),
-  "color.purple_text": (
+  "color.purpleText": (
     default: (#50495a),
   ),
-  "color.red_lighter": (
+  "color.redLighter": (
     default: (#fbeae5),
   ),
-  "color.red_light": (
+  "color.redLight": (
     default: (#fead9a),
   ),
   "color.red": (
     default: (#de3618),
   ),
-  "color.red_dark": (
+  "color.redDark": (
     default: (#bf0711),
   ),
-  "color.red_darker": (
+  "color.redDarker": (
     default: (#330101),
   ),
-  "color.red_text": (
+  "color.redText": (
     default: (#583c35),
   ),
-  "color.sky_lighter": (
+  "color.skyLighter": (
     default: (#f9fafb),
   ),
-  "color.sky_light": (
+  "color.skyLight": (
     default: (#f4f6f8),
   ),
   "color.sky": (
     default: (#dfe3e8),
   ),
-  "color.sky_dark": (
+  "color.skyDark": (
     default: (#c4cdd5),
   ),
-  "color.teal_lighter": (
+  "color.tealLighter": (
     default: (#e0f5f5),
   ),
-  "color.teal_light": (
+  "color.tealLight": (
     default: (#b7ecec),
   ),
   "color.teal": (
     default: (#47c1bf),
   ),
-  "color.teal_dark": (
+  "color.tealDark": (
     default: (#00848e),
   ),
-  "color.teal_darker": (
+  "color.tealDarker": (
     default: (#003135),
   ),
-  "color.teal_text": (
+  "color.tealText": (
     default: (#405352),
   ),
   "color.white": (
     default: (#ffffff),
   ),
-  "color.yellow_lighter": (
+  "color.yellowLighter": (
     default: (#fcf1cd),
   ),
-  "color.yellow_light": (
+  "color.yellowLight": (
     default: (#ffea8a),
   ),
   "color.yellow": (
     default: (#eec200),
   ),
-  "color.yellow_dark": (
+  "color.yellowDark": (
     default: (#8a6116),
   ),
-  "color.yellow_darker": (
+  "color.yellowDarker": (
     default: (#573b00),
   ),
-  "color.yellow_text": (
+  "color.yellowText": (
     default: (#595130),
   ),
   "font.family.base": (
@@ -188,13 +187,13 @@ $__token-values: (
   "space.none": (
     default: (0),
   ),
-  "space.extra_tight": (
+  "space.extraTight": (
     default: (4px),
   ),
   "space.tight": (
     default: (8px),
   ),
-  "space.base_tight": (
+  "space.baseTight": (
     default: (12px),
   ),
   "space.base": (
@@ -203,7 +202,7 @@ $__token-values: (
   "space.loose": (
     default: (20px),
   ),
-  "space.extra_loose": (
+  "space.extraLoose": (
     default: (32px),
   ),
 );
