--- a/www/src/layouts/docs.astro
+++ b/www/src/layouts/docs.astro
@@ -16,7 +16,7 @@ const { content = {} } = Astro.props;
     <style>
       .docs {
         display: flex;
-        padding-right: 12rem;
+        padding-right: token('space.layout.2xl');
       }
     </style>
   </head>
