--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -202,7 +202,7 @@ const version = packageJSON.version;
       .docs {
         display: grid;
         grid-template-columns: min-content auto;
-        padding-right: 12rem;
+        padding-right: token("space.layout.2xl");
       }
 
       #main {
