--- a/www/src/components/CobaltSm.astro
+++ b/www/src/components/CobaltSm.astro
@@ -3,15 +3,15 @@
 
   .box {
     align-items: flex-end;
-    border: 2.5px solid currentColor;
+    border: 2px solid currentColor;
     display: flex;
-    font-size: 1rem;
+    font-size: 100%;
     font-weight: 550;
     line-height: 0.8;
-    height: 2.25rem;
+    height: token('space.xl');
     justify-content: flex-end;
-    padding: 0.2em;
-    width: 2.25rem;
+    padding: token('space.3xs');
+    width: token('space.xl');
   }
 </style>
 
