--- a/www/src/styles/_fonts.scss
+++ b/www/src/styles/_fonts.scss
@@ -6,3 +6,19 @@
   font-weight: 1 999;
   src: url('https://drewhost.s3.amazonaws.com/PPNeueMontrealVariable.ttf') format('truetype');
 }
+
+@font-face {
+  font-family: 'IBM Plex Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: url('https://drewhost.s3.amazonaws.com/ibm-plex-mono-300.woff2') format('woff2'),
+    url('https://drewhost.s3.amazonaws.com/ibm-plex-mono-300.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'IBM Plex Mono';
+  font-style: italic;
+  font-weight: 400;
+  src: url('https://drewhost.s3.amazonaws.com/ibm-plex-mono-300-italic.woff2') format('woff2'),
+    url('https://drewhost.s3.amazonaws.com/ibm-plex-mono-300-italic.woff') format('woff');
+}
